optimize images, change navbar titles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Just Send It</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,14 +16,14 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Just Send It</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="#intro">Get Started</a></li>
+						<li><a href="#one">Why Just Send It</a></li>
+						<li><a href="#two">What We Offer</a></li>
+						<li><a href="#work">Where You Go</a></li>
+						<li><a href="#contact">Book A Trip</a></li>
 					</ul>
 				</nav>
 			</header>
