add hero title and paragraph

--- a/index.html
+++ b/index.html
@@ -33,10 +33,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hello.</h2>
+						<h2>Try It!</h2>
 					</header>
-					<p>Blandit ut Col Cubilia mus adipiscing erat accumsan interdum at Vestibulum<br />
-					sed faucibus cep arcu ipsum vel Sagittis Commodo Condimentum accumsan.</p>
+					<p>Don't know where to travel? Just Send It!</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
