add header detail and information in paragraph

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Who I Am</h2>
+						<h2>What We Offer </h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p>At Just Send It, you know instatly once booked where you are going, how you are getting there, and most importantly, what you are doing! Day by day trips are scheduled for your convenience.
+						Transportations to and from destinations is connected. You will live lavish in glamourous houses. You will feast on marvelous cuisines.
+					</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
