update contact header and span

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<h2>Book A Trip</h2>
+						<p>And remember to Just Send It!</p>
 					</header>
 					<div class="box">
 						<form method="post" action="#">
