change title color and header where you go color

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>Where You Go</h2>
-						<p>See below one of the many destinations you will reside at.</p>
+						<h2 style="color: #183755;">Where You Go</h2>
+						<p style="color: #183755;">See below one of the many destinations you will reside at.</p>
 					</header>
 
 					<!-- Gallery  -->
