remove unsued images, add inline style color to text

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="Vel Venenatis Cep" alt="" /></a>
+								<a href="images/lady-water.jpg" class="image fit"><img src="images/lady-water.jpg" title="Lady Modeling" alt="lady in black bikini posing in the water" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Pellentesque at" alt="" /></a>
+								<a href="images/water-plane.jpg" class="image fit"><img src="images/water-plane.jpg" title="Plane Modeling" alt="picture of plane landed on water" /></a>
 							</article>
 						</div>
 
