change copyright to company

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li>
+						<li>&copy; Just Send It</li>
 					</ul>
 
 			</footer>
