--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 						<h2>Try It!</h2>
 					</header>
 					<p>Don't know where to travel? Just Send It!</p>
+					<ul class="icons">
+						<li><a href="https://twitter.com/codewithfan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/stefantaitano/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+					</ul>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -41,7 +45,7 @@
 			<section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Why Just Send It</h2>
+						<h2 style="color: #183755;">Why Just Send It</h2>
 					</header>
 					<p>We create a custom curated package based on your desires, wants, and needs. You will receive more bang for your buck booking with our agency.
 						We have connections to all the hot spots around the world!
@@ -54,7 +58,7 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>What We Offer </h2>
+						<h2 style="color: #183755;">What We Offer </h2>
 					</header>
 					<p>At Just Send It, you know instatly once booked where you are going, how you are getting there, and most importantly, what you are doing! Day by day trips are scheduled for your convenience.
 						Transportations to and from destinations is connected. You will live lavish in glamourous houses. You will feast on marvelous cuisines.
@@ -111,12 +115,8 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://twitter.com/codewithfan" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.linkedin.com/in/stefantaitano/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 				<!-- Menu -->
